--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-cssjoin": "^0.3.0"
   },
   "repository": {
     "type": "git",
