--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grunt-cli": ">= 0.1.6",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
+    "grunt-contrib-haml": "^0.2.0",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
