--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grunt_kit",
-  "version": "0.0.0",
+  "version": "0.1.1",
   "description": "Grunt starter kit",
   "main": "index.js",
   "scripts": {
@@ -8,10 +8,10 @@
   },
   "devDependencies": {
     "grunt": ">= 0.4",
+    "grunt-allhaml": "^0.1.3",
     "grunt-cli": ">= 0.1.6",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-cssmin": "^0.10.0",
-    "grunt-contrib-haml": "^0.2.0",
     "grunt-contrib-imagemin": "^0.8.0",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-uglify": "^0.5.1",
