--- a/package.json
+++ b/package.json
@@ -5,10 +5,24 @@
   "main": "Gruntfile.js",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer-core": "^5.1.11",
     "gmsmith": "^0.5.0",
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^3.0.0",
-    "grunt-bower-concat": "^0.4.0"
+    "grunt-bower-concat": "^0.4.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-concat-css": "^0.3.1",
+    "grunt-contrib-coffee": "^0.13.0",
+    "grunt-contrib-concat": "^0.5.1",
+    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-jade": "^0.14.1",
+    "grunt-contrib-stylus": "^0.21.0",
+    "grunt-contrib-uglify": "^0.9.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-postcss": "^0.4.0",
+    "grunt-spritesmith": "^4.5.3",
+    "load-grunt-tasks": "^3.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
