--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "grunt-contrib-cssmin": "^0.12.2",
     "grunt-contrib-imagemin": "^0.9.4",
     "grunt-contrib-jade": "^0.14.1",
+    "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-stylus": "^0.21.0",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-postcss": "^0.4.0",
+    "grunt-sass-directory-import": "^0.1.3",
+    "grunt-spritesheet": "^0.1.4",
     "grunt-spritesmith": "^4.5.3",
     "load-grunt-tasks": "^3.1.0"
   },
